# fit-agent

./: .gitignore  Agent.md  README.md  Specification.md  test_req.json
Rogers/: .env.example  .env.rogers.example  .gitignore  README_ROGERS.md  TEST_PROCESS.md  agent_test.py  api_doc.md  database_schema.md  pyproject.toml  requirements.txt  rogers.db  rogers_main.py  run.py  test_api.http  test_simple.py
Rogers/agent_db/: agent.json
Rogers/alembic/: env.py
Rogers/alembic/versions/: 0e43dad3048d_add_body_composition_records.py  3f21a8b74d10_add_daily_tracking_tables.py  61666276a931_remove_coach_id_from_assessments.py  65b09800e46a_add_assessments_table.py  9a1c2f8a7b6d_add_agent_events_table.py  a1b2c3d4e5f6_add_meal_breakdown_to_daily_nutrition.py  ce5a604012dc_add_reasoning_and_tool_uses_to_agent_.py  e2c3ad11c3db_add_body_composition_and_daily_metrics_.py  e87c1dee3a2f_remove_role_from_users.py  f1a2b3c4d5e6_add_protein_rate_to_body_composition.py
Rogers/app/: __init__.py  config.py  main.py  requirements.txt  run.py  seed.py
Rogers/app/agent/: __init__.py
Rogers/app/db/: base.py  (+1 more)
Rogers/scripts/: build_console.py  fix_and_assign_meals.py  init_all.py  init_base_db.py  init_user_db.py  migrate_agent_data.py  migrate_heartbeat_config.py  migrate_to_async_memory.py  migrate_to_db_only.py  seed_exercises.py  seed_foods.json  seed_foods.py  seed_foods.sql  健身动作数据大全_中文版说明.json
Rogers/test/: conftest.py  test_agent_crud.py  test_process.py  test_process_api.py  test_session.py  test_skill.py
Rogers/web/: index.html  package.json
Rogers/webpage/: index.html
(+533 files in other folders)
